tests/metadata/overlays/istio/test_data/expected/kubeflow_apps_v1_deployment_metadata-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: server
    kustomize.component: metadata
  name: metadata-deployment
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
      kustomize.component: metadata
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        component: server
        kustomize.component: metadata
    spec:
      containers:
      - command:
        - ./server/server
        - --http_port=8080
        image: gcr.io/kubeflow-images-public/metadata:v0.1.11
        name: container
        ports:
        - containerPort: 8080
          name: backendapi
        readinessProbe:
          httpGet:
            httpHeaders:
            - name: ContentType
              value: application/json
            path: /api/v1alpha1/artifact_types
            port: backendapi
          initialDelaySeconds: 3
          periodSeconds: 5
          timeoutSeconds: 2
